--- a/package.json
+++ b/package.json
@@ -1,6 +1,18 @@
 {
-  "name": "ts-api",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT"
+    "name": "ts-api",
+    "version": "1.0.0",
+    "main": "index.js",
+    "license": "MIT",
+    "scripts": {
+        "start:ts": "tsc -w",
+        "start:dev": "nodemon ./build/index.js",
+        "build": "tsc",
+        "dev": "concurrently npm:start:*"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.16"
+    },
+    "dependencies": {
+        "concurrently": "^7.2.1"
+    }
 }
