--- a/package.json
+++ b/package.json
@@ -1,8 +1,21 @@
 {
-  "name": "ts-api",
-  "version": "1.0.0",
-  "main": "index.js",
-  "repository": "git@github.com:nairo-mudumane/ts-api-example.git",
-  "author": "nairo-mudumane <nairomudumane@outlook.com>",
-  "license": "MIT"
+    "name": "ts-api",
+    "version": "1.0.0",
+    "main": "index.js",
+    "repository": "git@github.com:nairo-mudumane/ts-api-example.git",
+    "author": "nairo-mudumane <nairomudumane@outlook.com>",
+    "license": "MIT",
+    "scripts": {
+        "dev": "nodemon --config nodemon.json src/index.ts"
+    },
+    "dependencies": {
+        "express": "^4.18.1"
+    },
+    "devDependencies": {
+        "@types/express": "^4.17.13",
+        "@types/node": "^17.0.35",
+        "nodemon": "^2.0.16",
+        "ts-node": "^10.8.0",
+        "typescript": "^4.7.2"
+    }
 }
