--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
     "name": "ts-api",
     "version": "1.0.0",
     "main": "index.js",
-    "repository": "git@github.com:nairo-mudumane/ts-api-example.git",
+    "repository": {
+        "type": "git",
+        "url": "git@github.com:nairo-mudumane/ts-api-example.git"
+    },
     "author": "nairo-mudumane <nairomudumane@outlook.com>",
     "license": "MIT",
     "scripts": {
